[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "plaform-be"
path = "src/main.rs"

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
log = "0.4.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.24.2", features = ["full"] }
futures = "0.3.25"
serde = { version = "1.0.152", features = ["derive"] }
chrono = "0.4.23"
base64 = "0.21.7"
serde_json = "1.0"
tabled = "0.15.0"
ratatui = "0.25.0"
crossterm = "0.27.0"
config = "0.13.4"
log4rs = "1.2.0"
[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
